setup social links

--- a/index.html
+++ b/index.html
@@ -56,17 +56,18 @@
 			<div class="tb-cell">
 				<div class="slide-text">
                    <div class="col-md-12 header-main">
-                    <h2>Artur Meyster</h2>
+                    <h2>Kahaan Patel</h2>
                       <ul id="text-slider">
-                        <li><h3>Web Developer</h3></li>
                         <li><h3>Software Engineer</h3></li>
-                        <li><h3>Technology Geek</h3></li>
+                        <li><h3>Hacker</h3></li>
+                        <li><h3>Hustler</h3></li>
                     </ul>
                  <div class="header-social">
                      <ul>
-                       <li><a href="https://twitter.com/arturmeyster" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                       <li><a href="https://github.com/devmeyster" target="_blank"><i class="fa fa-github"></i></a></li>
-                       <li><a href="https://www.linkedin.com/in/meyster" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                       <!-- <li><a href="https://twitter.com/arturmeyster" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
+                       <li><a href="mailto:kahaan.r.patel@gmail.com" target="_blank"><i class="far fa-envelope"></i></a></li>
+                       <li><a href="https://github.com/kahaan" target="_blank"><i class="fa fa-github"></i></a></li>
+                       <li><a href="https://www.linkedin.com/in/kahaan-patel-a89952a3" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                      </ul>
                  </div>
                 <!--  /.header-social-->
