--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
            <div class="row">
 
               <div class="col-md-4">
-                  <div class="about-media"><img src="images/arturmeyster-profile.jpeg" alt="Artur Meyster" /></div>
+                  <div class="about-media"><img src="images/Kahaan.jpeg" alt="Kahaan Patel" /></div>
               </div>
 
 
