--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                       <ul id="text-slider">
                         <li><h3>Software Engineer</h3></li>
                         <li><h3>Hacker</h3></li>
-                        <li><h3>Hustler</h3></li>
+                        <li><h3>Rubyist</h3></li>
                     </ul>
                  <div class="header-social">
                      <ul>
                        <!-- <li><a href="https://twitter.com/arturmeyster" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
-                       <li><a href="mailto:kahaan.r.patel@gmail.com" target="_blank"><i class="far fa-envelope"></i></a></li>
+                       <li><a href="mailto:kahaan.r.patel@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
                        <li><a href="https://github.com/kahaan" target="_blank"><i class="fa fa-github"></i></a></li>
                        <li><a href="https://www.linkedin.com/in/kahaan-patel-a89952a3" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                      </ul>
@@ -124,10 +124,10 @@
                 <!--End heading-->
 
                   <div class="about-desc">
-                       <p class="lead">I am Artur Meyster, a full-stack software engineer based in San Francisco.</p>
-                  <p>I fell in love with technology when I build my first website with HTML and CSS at the age of 12 and hosted it on Geocities! Since then I've been passionate about building applications that solve real world problems by applying new and exciting technologies.</p>
+                       <p class="lead">I'm, a full-stack software engineer based in San Francisco.</p>
+                  <p>I fell in love with coding only after graduating from college with a degree in business. Luckily for me, the internet has tons of great resources available to anyone with the drive to learn. Over the past year I have been able to teach myself the most in demand web develpment skills by doing different projects and learning through implementation. </p>
 
-                  <p>My latest experience has been focused on building single-page applications with JavaScript, Angular, Backbone, Ionic, HTML/CSS, jQuery, Node.js, MySQL and MongoDB.</p>
+                  <p>My experience includes building full-stack web applications with JavaScript, React, Redux, jQuery, Ruby on Rails, HTML/CSS, MySQL and PostgreSQL. </p>
 
                   <div class="page-scroll"><a class="btn btn-default" href="#contact">Contact Me</a>
                   <a class="btn btn-default" href="#works">See Portfolio</a>
@@ -155,30 +155,38 @@
                 <ul class="portfolio-filters text-center">
                     <li class="filter active" data-filter="all">all</li>
                     <li class="filter" data-filter="javascript">Javascript</li>
-                    <li class="filter" data-filter="angular">Angular.js</li>
-                    <li class="filter" data-filter="ionic">Ionic/Cordova</li>
-                    <li class="filter" data-filter="backbone">Backbone.js</li>
+                    <!-- <li class="filter" data-filter="angular">Angular.js</li> -->
+                    <li class="filter" data-filter="react">React</li>
+                    <li class="filter" data-filter="redux">Redux</li>
+                    <!-- <li class="filter" data-filter="ionic">Ionic/Cordova</li> -->
+                    <!-- <li class="filter" data-filter="backbone">Backbone.js</li> -->
                     <li class="filter" data-filter="jquery">jQuery</li>
-                    <li class="filter" data-filter="html">HTML/CSS</li>
-                    <li class="filter" data-filter="d3">D3.js</li>
-                    <li class="filter" data-filter="node">Node.js/Express</li>
+                    <li class="filter" data-filter="RubyOnRails">Ruby On Rails</li>
+                    <li class="filter" data-filter="postgresql">PostgreSQL</li>
                     <li class="filter" data-filter="mysql">MySQL</li>
-                    <li class="filter" data-filter="mongo">MongoDB</li>
-                    <li class="filter" data-filter="gulp">Gulp/Grunt</li>
+                    <li class="filter" data-filter="html">HTML/CSS</li>
+                    <!-- <li class="filter" data-filter="git">Git</li> -->
+                    <!-- <li class="filter" data-filter="d3">D3.js</li> -->
+                    <!-- <li class="filter" data-filter="node">Node.js/Express</li> -->
+                    <!-- <li class="filter" data-filter="mongo">MongoDB</li> -->
+                    <!-- <li class="filter" data-filter="gulp">Gulp/Grunt</li> -->
                 </ul><!--portfolio-filter nav-->
 
             <div id="grid">
-                <div class="col-md-12 col-sm-6 mix javascript angular ionic node mongo">
+                <div class="col-md-12 col-sm-6 mix javascript react redux jquery RubyOnRails postgresql mysql html">
                     <div class="container">
                       <div class="row">
                         <div class="col-md-6 col-sm-6">
                            <div class="image-wrapper">
-                                <img src="images/portfolio/miyagi.jpeg" class="img-responsive" alt="work">
+                                <img src="images/image-hide-n-seek-gif.gif" class="img-responsive" alt="work">
+                                <br/>
+                                <br/>
+                                <img src="images/image-hide-n-seek-gif-2.gif" class="img-responsive" alt="work">
                            <div class="image-overlay">
                              <br>
-                              <h3>Miyagi</h3>
+                              <h3>Image-Hide-N-Seek</h3>
                                <span>
-                               <a href="images/portfolio/miyagi.jpeg" title="Image description"  class="image-popup"> <i class="fa fa-camera-retro"></i></a>
+                                <a href="images/portfolio/miyagi.jpeg" title="Image description"  class="image-popup"> <i class="fa fa-camera-retro"></i></a>
                                 <a href="http://mr-miyagi.herokuapp.com/" target="_blank"><i class="fa fa-chain"></i></a>
                                </span>
                             </div>
@@ -484,9 +492,8 @@
 
                 <!--Start contact information -->
                 <div class="col-md-7 contact-address pull-right">
-                    <p> <i class="fa fa-map-marker"></i>944 Market St, 8th fl, San Francisco, CA 94102</p>
-                    <p> <i class="fa fa-envelope"></i><a href="mailto:meyster.artur@gmail.com?subject=Info-Request">meyster.artur@gmail.com</a></p>
-                    <p> <i class="fa fa-phone"></i>(646) 361 0938</p>
+                    <p> <i class="fa fa-map-marker"></i>178 Bluxome St, San Francisco, CA 94107</p>
+                    <p> <i class="fa fa-envelope"></i><a href="mailto:kahaan.r.patel@gmail.com?subject=Info-Request">kahaan.r.patel@gmail.com</a></p>
                 </div>
                 <!--End contact information -->
 		   </div> <!--/.row-->
@@ -501,9 +508,14 @@
                 <div class="col-md-12 text-center">
                     <!--Start footer social-->
                     <ul class="list-inline footer-social">
-                       <li><a href="https://twitter.com/arturmeyster" target="_blank"><i class="fa fa-twitter"></i></a></li>
+
+                      <li><a href="mailto:kahaan.r.patel@gmail.com" target="_blank"><i class="far fa-envelope"></i></a></li>
+                      <li><a href="https://github.com/kahaan" target="_blank"><i class="fa fa-github"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/kahaan-patel-a89952a3" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+
+                       <!-- <li><a href="https://twitter.com/arturmeyster" target="_blank"><i class="fa fa-twitter"></i></a></li>
                        <li><a href="https://github.com/devmeyster" target="_blank"><i class="fa fa-github"></i></a></li>
-                       <li><a href="https://www.linkedin.com/in/meyster" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                       <li><a href="https://www.linkedin.com/in/meyster" target="_blank"><i class="fa fa-linkedin"></i></a></li> -->
                   </ul>
                     <!-- End footer social -->
 
