--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
                              <br>
                               <h3>Image-Hide-N-Seek</h3>
                                <span>
-                                <a href="images/portfolio/miyagi.jpeg" title="Image description"  class="image-popup"> <i class="fa fa-camera-retro"></i></a>
-                                <a href="http://mr-miyagi.herokuapp.com/" target="_blank"><i class="fa fa-chain"></i></a>
+                                <a href="https://github.com/Kahaan/Steganography-backend" title="Image description"  class="image-popup"><i class="fa fa-github"></i></a>
+                                <!-- <a href="http://mr-miyagi.herokuapp.com/" target="_blank"><i class="fa fa-chain"></i></a> -->
                                </span>
                             </div>
                           </div>
@@ -195,18 +195,18 @@
                         <div class="col-md-6 col-sm-6">
                           <div class="cv-detail">
                             <div id="project-header">
-                              <h3>Miyagi</h3>
-                              <a href="https://github.com/WildDonut/WildDonut-Client" target="_blank"><i class="fa fa-github"></i> Github</a>
-                              <a href="http://mr-miyagi.herokuapp.com/" target="_blank"><i class="fa fa-external-link"></i> Live Site</a>
-                              <a href="https://itunes.apple.com/us/app/miyagi-app/id993464900?mt=8" target="_blank" class="appstore-link"><img src="images/AppStoreLogo.jpg" class="appstore"></a>
+                              <h3>Image-Hide-N-Seek</h3>
+                              <a href="https://github.com/Kahaan/Steganography-backend" target="_blank"><i class="fa fa-github"></i> Github</a>
+                              <!-- <a href="http://mr-miyagi.herokuapp.com/" target="_blank"><i class="fa fa-external-link"></i> Live Site</a> -->
+                              <!-- <a href="https://itunes.apple.com/us/app/miyagi-app/id993464900?mt=8" target="_blank" class="appstore-link"><img src="images/AppStoreLogo.jpg" class="appstore"></a> -->
                               <!-- <a href="https://itunes.apple.com/us/app/miyagi-app/id993464900?mt=8" target="_blank"><img src="images/AppStoreLogo.jpg" class="img-appstore" alt="work"></a> -->
                             </div>
                             <div class="project-details">
-                              <h5>Learn from amazing people nearby.</h5>
+                              <h5>Encrypt images with hidden messages.</h5>
                                 <br>
-                                <p><strong>Learn new skills. </strong>Miyagi is all about creating one-on-one, in-person learning experiences.</p>
-                                <p><strong>Pair up with teachers nearby. </strong>Miyagi creates a local learning community, so you can learn where and when it's convenient.</p>
-                                <p><strong>Secure, seamless transactions. </strong>Don't stress about exchanging cash. Payments handled seamlessly with Stripe.</p>
+                                <p><strong>Encrypt and decrypt images. </strong>Explore the world of digital Steganography by hiding custom text data in your own personal images!</p>
+                                <p><strong>Discover and comment on other users images. </strong>Users can checkout other users images uploaded to the platform and see the messages they're encrypted with.</p>
+                                <p><strong>Secure, seamless login/logout/signup. </strong>Don't stress about your data safety. User authentication Implemented using BCrypt for password salting and hashing.</p>
                               <br>
                               <br>
                               <h4>Responsibilities:</h4>
@@ -221,7 +221,7 @@
                     </div><!--project item and description container-->
                 </div> <!--work item-->
                 <br>
-                <div class="col-md-12 col-sm-6 mix javascript angular node mysql">
+                <!-- <div class="col-md-12 col-sm-6 mix javascript angular node mysql">
                   <div class="container">
                     <div class="row">
                       <div class="col-md-6 col-sm-6">
@@ -251,13 +251,13 @@
                             <p>•  Engineered a restaurant search functionality that integrates with Yelp’s API</p>
                             <p>•  Deployed, optimized, and troubleshot the performance of the Azure server and the interactions it had with Github</p>
                           </div>
-                        </div>
+                        </div> -->
                       </div><!--porject description-->
                     </div><!--project item and description row-->
                   </div><!--project item and description container-->
                 </div> <!--work item-->
-                <br>
-                <div class="col-md-12 col-sm-6 mix javascript angular node mysql">
+                <!-- <br> -->
+                <!-- <div class="col-md-12 col-sm-6 mix javascript angular node mysql">
                   <div class="container">
                     <div class="row">
                       <div class="col-md-6 col-sm-6">
@@ -285,13 +285,13 @@
                             <br>
                             <p>•  Developed a user interface using Angular.js which retrieves and scrambles words from Wordnik API </p>
                           </div>
-                        </div>
+                        </div> -->
                       </div><!--porject description-->
                     </div><!--project item and description row-->
                   </div><!--project item and description container-->
                 </div> <!--work item-->
-                <br>
-                <div class="col-md-12 col-sm-6 mix javascript ember">
+                <!-- <br> -->
+                <!-- <div class="col-md-12 col-sm-6 mix javascript ember">
                     <div class="container">
                       <div class="row">
                         <div class="col-md-6 col-sm-6">
@@ -320,13 +320,13 @@
                               <p>•	Designed front-end architecture in Famo.us to work with local business data retrieved from Yelp’s API</p>
                               <p>•	Collaborated with back-end team to produce asynchronous communication between front-end and Node/Express server</p>
                             </div>
-                          </div>
+                          </div> -->
                         </div><!--porject description-->
                       </div><!--project item and description row-->
                     </div><!--project item and description container-->
                   </div> <!--work item-->
-                  <br>
-                <div class="col-md-12 col-sm-6 mix rails ruby">
+                  <!-- <br> -->
+                <!-- <div class="col-md-12 col-sm-6 mix rails ruby">
                     <div class="container">
                       <div class="row">
                         <div class="col-md-6 col-sm-6">
@@ -356,7 +356,7 @@
                               <p>•	Developed a user interface using Angular.js which retrieves and displays Github repository stats </p>
                               <p>•	Built Express server with Node.js to handle fetching and parsing of data from the Github API</p>
                             </div>
-                          </div>
+                          </div> -->
                         </div><!--porject description-->
                       </div><!--project item and description row-->
                     </div><!--project item and description container-->
