added work history

--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
                               <br>
                               <br>
                               <h4>Responsibilities:</h4>
-                                <p>•	Built a mobile application front-end using Ionic Framework, Cordova and Angular.js.</p>
-                                <p>•  Architected RESTful API endpoints using Node.js/Express routers to save users, teachers and classes in a MongoDB database.</p>
-                                <p>•  Integrated front-end and back-end with Stripe API to securely process payments and withdrawals.</p>
-                                <p>•  Implemented continuous integration with CircleCi and test-driven-development utilizing Mocha, Chai, and Jasmine frameworks.</p>
+                                <p>•	Built the frontend of web application using React and Redux. Styled without the use of external library code.</p>
+                                <p>•  Architected RESTful API endpoints using rails to save Users, Posts and Comments in a PostgreSQL database.</p>
+                                <p>•  Secured front-end and back-end with User authentication implemented using BCrypt for password salting and hashing.</p>
+                                <p>•  Created custom image processing to allow encryption of PNG images with user inputed text messages. Implemented testing using rspec.</p>
                             </div>
                         </div>
                         </div><!--porject description-->
@@ -377,14 +377,14 @@
 
                  <!--Start Experience #2 -->
                     <li>
-                        <div class="c-date"><span>2012 - 2014</span></div>
+                        <div class="c-date"><span>2018 - Present</span></div>
                             <i class="time-icon fa fa-briefcase fa-2x"></i>
                             <div class="cv-detail">
-                            <h3>SunTrust Robinson Humphrey</h3>
-                            <h4>Senior Analyst</h4>
-                            <p>•	Advised Fortune 500 companies, including Home Depot, Lowe’s, CVS, General Mills, AutoZone and Tyson Foods on structuring mergers, acquisitions, IPOs, leverage buyouts, sale-­leasebacks and fixed income transactions</p>
-                            <p>•	Created financial models in Excel to evaluate cash flow and leverage effects of mergers and acquisitions</p>
-                            <p>•	Excelled in high pressure environments while working on multiple live deals simultaneously, which required coordination with various teams across the bank</p>
+                            <h3>Career Karma</h3>
+                            <h4>Product Manager</h4>
+                            <p>•	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <p>•	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <p>•	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                             </p>
                          </div>
                     </li>
@@ -393,15 +393,14 @@
 
                     <!--Start Experience #1 -->
                     <li>
-                      <div class="c-date"><span>2009 - 2012</span></div>
+                      <div class="c-date"><span>2016 - 2017</span></div>
                       <i class="time-icon fa fa-briefcase fa-2x"></i>
                       <div class="cv-detail">
-                        <h3>CinqueCollective.com</h3>
-                        <h4>Co-Founder</h4>
-                        <p>•  Built a platform for art collectors to buy, trade and sell contemporary art prints over the internet</p>
-                        <p>•	Designed and customized website layout with HTML/CSS and integrated basic functionality with Wordpress plugins</p>
-                        <p>•	Organically grew website traffic through SEO to over 600 visitors per month and generated over $50,000 annually
-                        </p>
+                        <h3>Macys</h3>
+                        <h4>Inventory Planning, Brand Analyst</h4>
+                        <p>•  Owned responsibility for and managed inventory flows end-to-end from deciding order quantity to distribution for 2 brands across 600+ locations and online </p>
+                        <p>•	Worked as sole liason between vendor and Macys to manage $12MM inventory receipt flows annually for 2 brands</p>
+                        <p>•	Identified and executed opportunity to expand store roll out of a trending shoe to 26 new locations with a total investment of $129,000</p>
                       </div>
                     </li>
             </ul>
@@ -419,10 +418,10 @@
             <ul class="cv-timeline-main">
                 <!--Start Education detail #1 -->
                     <li>
-                        <div class="c-date"><span>2015</span></div>
+                        <div class="c-date"><span>2018</span></div>
                         <i class="time-icon fa fa-briefcase fa-2x"></i>
                         <div class="cv-detail">
-                        <h3>Hack Reactor</h3>
+                        <h3>App Academy</h3>
                         <h4>Advanced Software Engineering Immersive</h4>
                         <p>12-week full-stack development program with over 800 hours of instruction, projects, and hands-on work</p>
                         </div>
@@ -430,13 +429,13 @@
 
                 <!--Start Education detail #2 -->
                     <li>
-                        <div class="c-date"><span>2008 - 2012</span></div>
+                        <div class="c-date"><span>2012 - 2016</span></div>
                         <i class="time-icon fa fa-briefcase fa-2x"></i>
                         <div class="cv-detail">
                         <h3>Emory University</h3>
-                        <h4>BA Finance</h4>
-                        <p><strong>Cumulative GPA:</strong> 3.7</p>
-                        <p><strong>Honors:</strong> Dean’s List Recipient</p>
+                        <h4>BA Finance, information Systems and Operations Management, Strategy and Management Consulting</h4>
+                        <!-- <p><strong>Cumulative GPA:</strong> 3.7</p> -->
+                        <!-- <p><strong>Honors:</strong> Dean’s List Recipient</p> -->
                         </div>
                     </li>
 
@@ -452,7 +451,7 @@
          <div class="row">
            <div class="col-md-12 page-scroll">
              <h1>You can take a closer look at my work</h1>
-             <a class="btn btn-primary" href="https://github.com/devmeyster" target="_blank">on Github</a>
+             <a class="btn btn-primary" href="https://github.com/kahaan" target="_blank">on Github</a>
            </div>
          </div> <!-- /.row-->
        </div> <!-- /.container-->
