added work history

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                         <h4>Inventory Planning, Brand Analyst</h4>
                         <p>•  Owned responsibility for and managed inventory flows end-to-end from deciding order quantity to distribution for 2 brands across 600+ locations and online </p>
                         <p>•	Worked as sole liason between vendor and Macys to manage $12MM inventory receipt flows annually for 2 brands</p>
-                        <p>•	Identified and executed opportunity to expand store roll out of a trending shoe to 26 new locations with a total investment of $129,000</p>
+                        <p>•	Identified and executed opportunity to expand store roll out of a trending SKU to 26 new locations with a total investment of $129,000</p>
                       </div>
                     </li>
             </ul>
