added work history

--- a/index.html
+++ b/index.html
@@ -403,6 +403,21 @@
                         <p>•	Identified and executed opportunity to expand store roll out of a trending SKU to 26 new locations with a total investment of $129,000</p>
                       </div>
                     </li>
+
+
+
+                    <!--Start Experience #1 -->
+                    <li>
+                      <div class="c-date"><span>2015</span></div>
+                      <i class="time-icon fa fa-briefcase fa-2x"></i>
+                      <div class="cv-detail">
+                        <h3>Amazon</h3>
+                        <h4>Financial Analyst</h4>
+                        <p>•  Owned responsibility for and managed inventory flows end-to-end from deciding order quantity to distribution for 2 brands across 600+ locations and online </p>
+                        <p>•	Worked as sole liason between vendor and Macys to manage $12MM inventory receipt flows annually for 2 brands</p>
+                        <p>•	Identified and executed opportunity to expand store roll out of a trending SKU to 26 new locations with a total investment of $129,000</p>
+                      </div>
+                    </li>
             </ul>
         </div> <!-- /.container-->
     </section>
