--- a/index.html
+++ b/index.html
@@ -381,11 +381,13 @@
                             <i class="time-icon fa fa-briefcase fa-2x"></i>
                             <div class="cv-detail">
                             <h3>Career Karma</h3>
-                            <h4>Product Manager</h4>
+                            <h4>Software Engineer</h4>
                             <!-- <p>•	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
-                            <p>•	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                            <p>•	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                            </p>
+                            <p>•	Career Karma is a social network for people interested in learning to code, focused on p2p learning and matching users with bootcamps. We have scaled to over 5,000 users in under a year and shipped both an ios and android app in that time</p>
+                            <p>•	Created unit and feature tests to ensure smooth functioning of features before deployment, implemented using mocha and detox</p>
+                            <p>•	Created admin dashboard to allow clustering users by cohort and activity in app, simplifying product development process</p>
+                            <p>•	Identified critical events associated with high user retention and implemented changes to user journey to encourage associated behavior resulting in 32% increase in new user retention</p>
+
                          </div>
                     </li>
 
