--- a/index.html
+++ b/index.html
@@ -415,9 +415,8 @@
                       <div class="cv-detail">
                         <h3>Amazon</h3>
                         <h4>Financial Analyst</h4>
-                        <p>•  Owned responsibility for and managed inventory flows end-to-end from deciding order quantity to distribution for 2 brands across 600+ locations and online </p>
-                        <p>•	Worked as sole liason between vendor and Macys to manage $12MM inventory receipt flows annually for 2 brands</p>
-                        <p>•	Identified and executed opportunity to expand store roll out of a trending SKU to 26 new locations with a total investment of $129,000</p>
+                        <p>•  Single handedly planned & executed project directly leading to rental savings of $964,500 a 24% reduction in rental expenditure </p>
+                        <p>•	Created and implemented solution to track unoccupied server space in high rent data centers for AWS’s CloudFront service, and determined which spaces to return to vendor, reported directly to SVP of AWS</p>
                       </div>
                     </li>
             </ul>
