--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
                               <!-- <a href="https://itunes.apple.com/us/app/miyagi-app/id993464900?mt=8" target="_blank"><img src="images/AppStoreLogo.jpg" class="img-appstore" alt="work"></a> -->
                             </div>
                             <div class="project-details">
+                              <br>
                               <h5>Encrypt images with hidden messages.</h5>
                                 <br>
                                 <p><strong>Encrypt and decrypt images. </strong>Explore the world of digital Steganography by hiding custom text data in your own personal images!</p>
@@ -416,7 +417,7 @@
                         <h3>Amazon</h3>
                         <h4>Financial Analyst</h4>
                         <p>•  Single handedly planned & executed project directly leading to rental savings of $964,500 a 24% reduction in rental expenditure </p>
-                        <p>•	Created and implemented solution to track unoccupied server space in high rent data centers for AWS’s CloudFront service, and determined which spaces to return to vendor, reported directly to SVP of AWS</p>
+                        <p>•	Created and implemented solution to track unoccupied server space in high rent data centers for AWS’s CloudFront service, and determined which spaces to return to vendor </p>
                       </div>
                     </li>
             </ul>
