--- a/index.html
+++ b/index.html
@@ -125,9 +125,11 @@
 
                   <div class="about-desc">
                        <p class="lead">I'm, a full-stack software engineer based in San Francisco.</p>
-                  <p>I fell in love with coding only after graduating from college with a degree in business. Luckily for me, the internet has tons of great resources available to anyone with the drive to learn. Over the past year I have been able to teach myself the most in demand web develpment skills by doing different projects and learning through implementation. </p>
+                  <p>I enjoy building products that solve daily problems. </p>
 
-                  <p>My experience includes building full-stack web applications with JavaScript, React, Redux, jQuery, Ruby on Rails, HTML/CSS, MySQL and PostgreSQL. </p>
+                  <p>My experience includes building full-stack web apps, production API's, with JavaScript, React, Redux, jQuery, Ruby on Rails, HTML/CSS, MySQL and PostgreSQL. </p>
+
+                  <p>My latest experience has been as a Software Engineer for a Y Combinator backed startup in San Francisco building a real-time messaging app using React/React Native, GraphQL, Apollo, PostgreSQL, and AWS Lambda. </p>
 
                   <div class="page-scroll"><a class="btn btn-default" href="#contact">Contact Me</a>
                   <a class="btn btn-default" href="#works">See Portfolio</a>
