--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                        <p class="lead">I'm, a full-stack software engineer based in San Francisco.</p>
                   <p>I enjoy building products that solve daily problems. </p>
 
-                  <p>My experience includes building full-stack web apps, production API's, with JavaScript, React, Redux, jQuery, Ruby on Rails, HTML/CSS, MySQL and PostgreSQL. </p>
+                  <p>My experience includes building full-stack web apps, working a production codebas, writing unit and feature tests, with JavaScript, React, Redux, jQuery, Ruby on Rails, RSpec, Detox, Mocha, HTML/CSS, MySQL and PostgreSQL. </p>
 
                   <p>My latest experience has been as a Software Engineer for a Y Combinator backed startup in San Francisco building a real-time messaging app using React/React Native, GraphQL, Apollo, PostgreSQL, and AWS Lambda. </p>
 
@@ -213,7 +213,7 @@
                               <br>
                               <br>
                               <h4>Responsibilities:</h4>
-                                <p>•	Built the frontend of web application using React and Redux. Styled without the use of external library code.</p>
+                                <p>•	Built a full-stack web application using React and Redux. Styled without the use of external library code.</p>
                                 <p>•  Architected RESTful API endpoints using rails to save Users, Posts and Comments in a PostgreSQL database.</p>
                                 <p>•  Secured front-end and back-end with User authentication implemented using BCrypt for password salting and hashing.</p>
                                 <p>•  Created custom image processing to allow encryption of PNG images with user inputed text messages. Implemented testing using rspec.</p>
