--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                        <p class="lead">I'm, a full-stack software engineer based in San Francisco.</p>
                   <p>I enjoy building products that solve daily problems. </p>
 
-                  <p>My experience includes building full-stack web apps, working a production codebas, writing unit and feature tests, with JavaScript, React, Redux, jQuery, Ruby on Rails, RSpec, Detox, Mocha, HTML/CSS, MySQL and PostgreSQL. </p>
+                  <p>My experiences includes building full-stack web apps, writing unit and feature tests, with JavaScript, React, Redux, jQuery, Ruby on Rails, RSpec, Detox, Mocha, HTML/CSS, MySQL and PostgreSQL. </p>
 
                   <p>My latest experience has been as a Software Engineer for a Y Combinator backed startup in San Francisco building a real-time messaging app using React/React Native, GraphQL, Apollo, PostgreSQL, and AWS Lambda. </p>
 
