--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                   <div class="about-desc">
                        <p class="lead">Full-stack software engineer based in San Francisco.</p>
-                  <p>I enjoy building products that solve daily problems. </p>
+                  <p>I enjoy leveraging technology to solve high impact problems. </p>
 
                   <p>My experiences includes building full-stack web apps, writing unit and feature tests, with JavaScript, React, Redux, jQuery, Ruby on Rails, RSpec, Detox, Mocha, HTML/CSS, MySQL and PostgreSQL. </p>
 
