--- a/index.html
+++ b/index.html
@@ -452,7 +452,9 @@
                         <i class="time-icon fa fa-briefcase fa-2x"></i>
                         <div class="cv-detail">
                         <h3>Emory University</h3>
-                        <h4>BA Finance, information Systems and Operations Management, Strategy and Management Consulting</h4>
+                        <h4>BA Finance | Information Systems and Operations Management | Strategy and Management Consulting</h4>
+
+                        <p><strong>Coursework: </strong>Intermediate Statistics, Data Analytics & Visualization, Applied Entrepreneurship </p>
                         <!-- <p><strong>Cumulative GPA:</strong> 3.7</p> -->
                         <!-- <p><strong>Honors:</strong> Dean’s List Recipient</p> -->
                         </div>
